; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_verbs.c_nes_unregister_ofa_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/nes/extr_nes_verbs.c_nes_unregister_ofa_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nes_ib_device = type { %struct.TYPE_2__, %struct.nes_vnic* }
%struct.TYPE_2__ = type { i32 }
%struct.nes_vnic = type { i64 }

@nes_dev_attributes = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nes_ib_device*)* @nes_unregister_ofa_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nes_unregister_ofa_device(%struct.nes_ib_device* %0) #0 {
  %2 = alloca %struct.nes_ib_device*, align 8
  %3 = alloca %struct.nes_vnic*, align 8
  %4 = alloca i32, align 4
  store %struct.nes_ib_device* %0, %struct.nes_ib_device** %2, align 8
  %5 = load %struct.nes_ib_device*, %struct.nes_ib_device** %2, align 8
  %6 = getelementptr inbounds %struct.nes_ib_device, %struct.nes_ib_device* %5, i32 0, i32 1
  %7 = load %struct.nes_vnic*, %struct.nes_vnic** %6, align 8
  store %struct.nes_vnic* %7, %struct.nes_vnic** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %23, %1
  %9 = load i32, i32* %4, align 4
  %10 = load i32*, i32** @nes_dev_attributes, align 8
  %11 = call i32 @ARRAY_SIZE(i32* %10)
  %12 = icmp slt i32 %9, %11
  br i1 %12, label %13, label %26

13:                                               ; preds = %8
  %14 = load %struct.nes_ib_device*, %struct.nes_ib_device** %2, align 8
  %15 = getelementptr inbounds %struct.nes_ib_device, %struct.nes_ib_device* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32*, i32** @nes_dev_attributes, align 8
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %17, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @device_remove_file(i32* %16, i32 %21)
  br label %23

23:                                               ; preds = %13
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %8

26:                                               ; preds = %8
  %27 = load %struct.nes_vnic*, %struct.nes_vnic** %3, align 8
  %28 = getelementptr inbounds %struct.nes_vnic, %struct.nes_vnic* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %26
  %32 = load %struct.nes_ib_device*, %struct.nes_ib_device** %2, align 8
  %33 = getelementptr inbounds %struct.nes_ib_device, %struct.nes_ib_device* %32, i32 0, i32 0
  %34 = call i32 @ib_unregister_device(%struct.TYPE_2__* %33)
  br label %35

35:                                               ; preds = %31, %26
  %36 = load %struct.nes_vnic*, %struct.nes_vnic** %3, align 8
  %37 = getelementptr inbounds %struct.nes_vnic, %struct.nes_vnic* %36, i32 0, i32 0
  store i64 0, i64* %37, align 8
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @device_remove_file(i32*, i32) #1

declare dso_local i32 @ib_unregister_device(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
